[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Startup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Vehicles/Images/Truck.png" type="Texture" id=2]
[ext_resource path="res://Assets/Vehicles/Images/Car.png" type="Texture" id=3]
[ext_resource path="res://Assets/Vehicles/Images/Tractor.png" type="Texture" id=4]
[ext_resource path="res://Assets/Vehicles/Images/Minibus.png" type="Texture" id=5]
[ext_resource path="res://Assets/Vehicles/Images/QuadBike.png" type="Texture" id=6]
[ext_resource path="res://Assets/Worlds/Images/SketchUpWorld.png" type="Texture" id=7]
[ext_resource path="res://Assets/Worlds/Images/GridMapWorld.png" type="Texture" id=8]
[ext_resource path="res://Assets/Worlds/Images/RealWorld.png" type="Texture" id=9]
[ext_resource path="res://Assets/Vehicles/Images/LargeDumpTruck.png" type="Texture" id=10]

[sub_resource type="ButtonGroup" id=1]
resource_name = "ChooseVehicleButtonGroup"

[sub_resource type="ButtonGroup" id=2]
resource_name = "ChooseWorldButtonGroup"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
car_button = NodePath("Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer/CarButton")
quad_bike_button = NodePath("Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer/QuadBikeButton")
truck_button = NodePath("Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer/TruckButton")
tractor_button = NodePath("Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer/TractorButton")
minibus_button = NodePath("Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer/MinibusButton")
large_dump_truck_button = NodePath("Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer/LargeDumpTruckButton")
sketchup_world_button = NodePath("Page/OptionsAndButtons/ChooseWorld/ScrollContainer/VBoxContainer/SketchUpWorldButton")
gridmap_world_button = NodePath("Page/OptionsAndButtons/ChooseWorld/ScrollContainer/VBoxContainer/GridMapWorldButton")
real_world_button = NodePath("Page/OptionsAndButtons/ChooseWorld/ScrollContainer/VBoxContainer/RealWorldButton")
day_night_cycle_button = NodePath("Page/OptionsAndButtons/Buttons/DayNightCycle")

[node name="Page" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_lock_": true
}

[node name="TitleLabel" type="Label" parent="Page"]
margin_right = 1560.0
margin_bottom = 14.0
text = "WELCOME_TO_VEHICLE_KEY"
align = 1

[node name="HSeparator" type="HSeparator" parent="Page"]
margin_top = 18.0
margin_right = 1560.0
margin_bottom = 22.0

[node name="OptionsAndButtons" type="HBoxContainer" parent="Page"]
margin_top = 26.0
margin_right = 1560.0
margin_bottom = 860.0
size_flags_vertical = 3

[node name="ChooseVehicle" type="VBoxContainer" parent="Page/OptionsAndButtons"]
margin_right = 252.0
margin_bottom = 834.0

[node name="Label" type="Label" parent="Page/OptionsAndButtons/ChooseVehicle"]
margin_right = 252.0
margin_bottom = 14.0
text = "CHOOSE_VEHICLE_KEY"

[node name="HSeparator" type="HSeparator" parent="Page/OptionsAndButtons/ChooseVehicle"]
margin_top = 18.0
margin_right = 252.0
margin_bottom = 22.0

[node name="ScrollContainer" type="ScrollContainer" parent="Page/OptionsAndButtons/ChooseVehicle"]
margin_top = 26.0
margin_right = 252.0
margin_bottom = 834.0
rect_min_size = Vector2( 252, 0 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer"]
margin_right = 240.0
margin_bottom = 1324.0
rect_min_size = Vector2( 240, 0 )
alignment = 1

[node name="CarButton" type="Button" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 201.0
rect_min_size = Vector2( 240, 201 )
hint_tooltip = "CAR_KEY"
toggle_mode = true
pressed = true
group = SubResource( 1 )
icon = ExtResource( 3 )
icon_align = 1

[node name="QuadBikeButton" type="Button" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 240.0
margin_bottom = 394.0
rect_min_size = Vector2( 240, 189 )
hint_tooltip = "QUAD_BIKE_KEY"
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 6 )
icon_align = 1

[node name="TruckButton" type="Button" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer"]
margin_top = 398.0
margin_right = 240.0
margin_bottom = 615.0
rect_min_size = Vector2( 240, 217 )
hint_tooltip = "TRUCK_KEY"
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 2 )
icon_align = 1

[node name="TractorButton" type="Button" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer"]
margin_top = 619.0
margin_right = 240.0
margin_bottom = 858.0
rect_min_size = Vector2( 240, 239 )
hint_tooltip = "TRACTOR_KEY"
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 4 )
icon_align = 1

[node name="MinibusButton" type="Button" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer"]
margin_top = 862.0
margin_right = 240.0
margin_bottom = 1080.0
rect_min_size = Vector2( 240, 218 )
hint_tooltip = "MINIBUS_KEY"
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 5 )
icon_align = 1

[node name="LargeDumpTruckButton" type="Button" parent="Page/OptionsAndButtons/ChooseVehicle/ScrollContainer/VBoxContainer"]
margin_top = 1084.0
margin_right = 240.0
margin_bottom = 1324.0
rect_min_size = Vector2( 240, 240 )
hint_tooltip = "LARGE_DUMP_TRUCK_KEY"
toggle_mode = true
group = SubResource( 1 )
icon = ExtResource( 10 )
icon_align = 1

[node name="ChooseWorld" type="VBoxContainer" parent="Page/OptionsAndButtons"]
margin_left = 256.0
margin_right = 508.0
margin_bottom = 834.0

[node name="Label" type="Label" parent="Page/OptionsAndButtons/ChooseWorld"]
margin_right = 252.0
margin_bottom = 14.0
text = "CHOOSE_WORLD_KEY"

[node name="HSeparator" type="HSeparator" parent="Page/OptionsAndButtons/ChooseWorld"]
margin_top = 18.0
margin_right = 252.0
margin_bottom = 22.0

[node name="ScrollContainer" type="ScrollContainer" parent="Page/OptionsAndButtons/ChooseWorld"]
margin_top = 26.0
margin_right = 252.0
margin_bottom = 834.0
rect_min_size = Vector2( 252, 0 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Page/OptionsAndButtons/ChooseWorld/ScrollContainer"]
margin_right = 240.0
margin_bottom = 467.0
rect_min_size = Vector2( 240, 0 )
alignment = 1

[node name="SketchUpWorldButton" type="Button" parent="Page/OptionsAndButtons/ChooseWorld/ScrollContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 153.0
rect_min_size = Vector2( 240, 153 )
hint_tooltip = "SKETCHUP_WORLD_KEY"
toggle_mode = true
pressed = true
group = SubResource( 2 )
icon = ExtResource( 7 )
icon_align = 1

[node name="GridMapWorldButton" type="Button" parent="Page/OptionsAndButtons/ChooseWorld/ScrollContainer/VBoxContainer"]
margin_top = 157.0
margin_right = 240.0
margin_bottom = 310.0
rect_min_size = Vector2( 240, 153 )
hint_tooltip = "GRIDMAP_WORLD_KEY"
toggle_mode = true
group = SubResource( 2 )
icon = ExtResource( 8 )
icon_align = 1

[node name="RealWorldButton" type="Button" parent="Page/OptionsAndButtons/ChooseWorld/ScrollContainer/VBoxContainer"]
margin_top = 314.0
margin_right = 240.0
margin_bottom = 467.0
rect_min_size = Vector2( 240, 153 )
hint_tooltip = "REAL_WORLD_KEY"
toggle_mode = true
group = SubResource( 2 )
icon = ExtResource( 9 )
icon_align = 1

[node name="Buttons" type="VBoxContainer" parent="Page/OptionsAndButtons"]
margin_left = 512.0
margin_right = 689.0
margin_bottom = 834.0
size_flags_horizontal = 4

[node name="DayNightCycle" type="CheckBox" parent="Page/OptionsAndButtons/Buttons"]
margin_right = 177.0
margin_bottom = 16.0
text = "DAY_NIGHT_CYCLE_KEY"

[node name="HSeparator" type="HSeparator" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 20.0
margin_right = 177.0
margin_bottom = 24.0

[node name="StartOfflineGameButton" type="Button" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 28.0
margin_right = 177.0
margin_bottom = 42.0
text = "START_OFFLINE_GAME_KEY"

[node name="HostNetworkGameButton" type="Button" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 46.0
margin_right = 177.0
margin_bottom = 60.0
text = "HOST_NETWORK_GAME_KEY"

[node name="JoinNetworkGameButton" type="Button" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 64.0
margin_right = 177.0
margin_bottom = 78.0
text = "JOIN_NETWORK_GAME_KEY"

[node name="HSeparator2" type="HSeparator" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 82.0
margin_right = 177.0
margin_bottom = 86.0

[node name="VersionLabel" type="Label" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 90.0
margin_right = 177.0
margin_bottom = 104.0
text = "10.0.0.0"
align = 1

[node name="HSeparator3" type="HSeparator" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 108.0
margin_right = 177.0
margin_bottom = 112.0

[node name="AboutGameButton" type="Button" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 116.0
margin_right = 177.0
margin_bottom = 130.0
text = "ABOUT_GAME_KEY"

[node name="LicenseInformationButton" type="Button" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 134.0
margin_right = 177.0
margin_bottom = 148.0
text = "License information"

[node name="ExitGameButton" type="Button" parent="Page/OptionsAndButtons/Buttons"]
margin_top = 152.0
margin_right = 177.0
margin_bottom = 166.0
text = "EXIT_GAME_KEY"

[node name="AboutGameDialog" type="AcceptDialog" parent="."]
margin_right = 169.0
margin_bottom = 58.0
window_title = "ABOUT_GAME_KEY"
dialog_text = "ABOUT_GAME_TEXT_KEY"

[node name="LicenseInformationDialog" type="AcceptDialog" parent="."]
margin_right = 478.0
margin_bottom = 245.0
window_title = "License information"
dialog_text = "Vehicle is a car driving computer game, that is createt with Godot Engine.
Copyright (C) 2022 Janosch Lion

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <https://www.gnu.org/licenses/>.
"

[node name="JoinNetworkGameDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "JOIN_NETWORK_GAME_KEY"

[node name="GridContainer" type="GridContainer" parent="JoinNetworkGameDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 270.0
margin_bottom = 60.0
columns = 2

[node name="IPLabel" type="Label" parent="JoinNetworkGameDialog/GridContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "SERVER_IP_KEY"

[node name="IPLineEdit" type="LineEdit" parent="JoinNetworkGameDialog/GridContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 66.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 0 )

[node name="NameLabel" type="Label" parent="JoinNetworkGameDialog/GridContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "YOUR_NAME_KEY"

[node name="NameLineEdit" type="LineEdit" parent="JoinNetworkGameDialog/GridContainer"]
margin_right = 58.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )

[node name="InvalidIPAddressDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 52.0
dialog_text = "INVALID_IP_ADDRESS_KEY"

[node name="InvalidNameDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 52.0
dialog_text = "INVALID_NAME_KEY"

[node name="HostNetworkGameDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "HOST_NETWORK_GAME_KEY"

[node name="GridContainer" type="GridContainer" parent="HostNetworkGameDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 317.0
margin_bottom = 60.0
columns = 2

[node name="MaximumPlayersLabel" type="Label" parent="HostNetworkGameDialog/GridContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "MAXIMUM_PLAYERS_KEY"

[node name="MaximumPlayersSpinBox" type="SpinBox" parent="HostNetworkGameDialog/GridContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 217.0
margin_bottom = 40.0
min_value = 2.0
value = 20.0

[node name="NameLabel" type="Label" parent="HostNetworkGameDialog/GridContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "YOUR_NAME_KEY"

[node name="NameLineEdit" type="LineEdit" parent="HostNetworkGameDialog/GridContainer"]
margin_right = 150.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )

[connection signal="pressed" from="Page/OptionsAndButtons/Buttons/StartOfflineGameButton" to="." method="_start_offline_game"]
[connection signal="pressed" from="Page/OptionsAndButtons/Buttons/HostNetworkGameButton" to="HostNetworkGameDialog" method="popup_centered"]
[connection signal="pressed" from="Page/OptionsAndButtons/Buttons/JoinNetworkGameButton" to="JoinNetworkGameDialog" method="popup_centered"]
[connection signal="pressed" from="Page/OptionsAndButtons/Buttons/AboutGameButton" to="AboutGameDialog" method="popup_centered"]
[connection signal="pressed" from="Page/OptionsAndButtons/Buttons/LicenseInformationButton" to="LicenseInformationDialog" method="popup_centered"]
[connection signal="pressed" from="Page/OptionsAndButtons/Buttons/ExitGameButton" to="." method="_exit"]
[connection signal="confirmed" from="LicenseInformationDialog" to="." method="_license_agreed"]
[connection signal="confirmed" from="JoinNetworkGameDialog" to="." method="_join_network_game"]
[connection signal="confirmed" from="HostNetworkGameDialog" to="." method="_host_network_game"]
